--- a/src/components/AsideContent/styles.module.scss
+++ b/src/components/AsideContent/styles.module.scss
@@ -1,10 +1,20 @@
 .title {
-  font-size: 48px;
+  display: none;
   margin-bottom: 32px;
+
+  @media screen and (min-width:992px) {
+    display: block;
+    font-size: 48px;
+  }
 }
 
 .textRegular {
+  font-size: 16px;
   font-weight: 400;
+  
+  @media screen and (min-width:992px) {
+    font-size: 1.5em;
+  }
 }
 
 .marginBottom {
