--- a/src/components/AsideImage/styles.module.scss
+++ b/src/components/AsideImage/styles.module.scss
@@ -9,6 +9,16 @@
   padding: 0 80px;
 }
 
+.title {
+  display: block;
+  margin-bottom: 32px;
+  font-size: 24px;
+
+  @media screen and (min-width:992px) {
+    display: none;
+  }
+}
+
 .icons {
   margin-top: 40px;
   display: flex;
