--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,6 +31,14 @@ a {
   text-decoration: none;
 }
 
+h2 {
+  font-size: 16px;
+
+  @media screen and (min-width:992px) {
+    font-size: 1.5em;
+  }
+}
+
 @media(max-width: 1080px) {
   html {
     font-size: 93.75%;
